--- a/manifest.json
+++ b/manifest.json
@@ -2,17 +2,17 @@
   "manifest_version": 2,
   "name": "Monsieur Sapin extension",
   "description": "Suivez l'actualité de Monsieur Sapin",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "permissions": ["http://*/*", "https://*/*", "notifications", "tabs"],
   "browser_action": {
-    "default_icon": "/img/icon.png",
-    "default_popup": "/popup/popup.html"
+    "default_icon": "/src/img/icon.png",
+    "default_popup": "popup.html"
   },
   "icons": {
-    "128": "/img/icon_128.png"
+    "128": "/src/img/icon_128.png"
   },
   "background": {
-    "scripts": ["/js/background.js"]
+    "scripts": ["/src/js/background.js"]
   },
   "author": {
       "main": "Volchan",
