--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "permissions": ["http://*/*", "https://*/*", "notifications", "tabs"],
   "browser_action": {
     "default_icon": "/src/img/icon.png",
-    "default_popup": "popup.html"
+    "default_popup": "/src/popup.html"
   },
   "icons": {
     "128": "/src/img/icon_128.png"
