--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "webpack": "^1.12.14"
+  },
+  "dependencies": {
+    "axios": "^0.17.1"
   }
 }
