--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "manifest_version": 2,
   "name": "Monsieur Sapin extension",
   "description": "Suivez l'actualité de Monsieur Sapin",
-  "version": "2.2.0",
-  "permissions": ["http://*/*", "https://*/*", "cookies", "notifications", "tabs"],
+  "version": "2.2.3",
+  "permissions": ["http://*/*", "https://*/*", "storage", "notifications", "tabs"],
   "browser_action": {
     "default_icon": "/src/img/icon.png",
     "default_popup": "/src/popup.html"
