--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,11 @@
   "manifest_version": 2,
   "name": "Monsieur Sapin extension",
   "description": "Suivez l'actualité de Monsieur Sapin",
-  "version": "2.2.4",
+  "version": "2.2.5",
   "permissions": ["http://*/*", "https://*/*", "storage", "notifications", "tabs"],
   "browser_action": {
     "default_icon": "/src/img/icon.png",
+    "default_title": "Monsieur Sapin est hors ligne",
     "default_popup": "/src/popup.html"
   },
   "icons": {
