--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,7 +3,7 @@
   "name": "Monsieur Sapin extension",
   "description": "Suivez l'actualité de Monsieur Sapin",
   "version": "3.0.1",
-  "permissions": ["http://*/*", "https://*/*", "storage", "notifications", "tabs"],
+  "permissions": ["http://*/*", "https://*/*", "storage", "notifications", "tabs", "alarms"],
   "browser_action": {
     "default_icon": "./assets/icon.png",
     "default_title": "Monsieur Sapin est hors ligne",
