--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Monsieur Sapin extension",
   "description": "Suivez l'actualité de Monsieur Sapin",
-  "version": "3.0.1",
+  "version": "3.1.0",
   "permissions": ["http://*/*", "https://*/*", "storage", "notifications", "tabs", "alarms"],
   "browser_action": {
     "default_icon": "./assets/icon.png",
@@ -13,7 +13,8 @@
     "128": "./assets/icon_live.png"
   },
   "background": {
-    "scripts": ["background.bundle.js"]
+    "scripts": ["background.bundle.js"],
+    "persisted": true
   },
   "author": {
       "main": "Volchan",
